--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -5,7 +5,7 @@
     <title>Blog</title>
 </head>
 <body>
-{% for p in posts %}
+{% for p in post_list %}
     <a href={{ p.get_absolute_url }}><h1>{{ p.title }}</h1></a>
     <h4>{{ p.created_at }}</h4>
     <p>{{ p.content }}</p>
