--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -70,6 +70,11 @@
                 <section class="mb-5">
                     {{ post.content }}
                 </section>
+                {% if post.file_upload %}
+                <section class="mb-5">
+                    <a href="{{ post.file_upload.url }}" class="btn btn-outline-primary" role="button" aria-pressed="true">Download</a>
+                </section>
+                {% endif %}
             </article>
             <!-- Comments section-->
             <section class="mb-5">
