--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -72,7 +72,17 @@
                 </section>
                 {% if post.file_upload %}
                 <section class="mb-5">
-                    <a href="{{ post.file_upload.url }}" class="btn btn-outline-primary" role="button" aria-pressed="true">Download</a>
+                    <a href="{{ post.file_upload.url }}" class="btn btn-outline-primary" role="button" aria-pressed="true">Download:
+                    {% if post.get_file_ext == 'csv' %}
+                        <i class="fas fa-file-csv"></i>
+                    {% elif post.get_file_ext == 'xlsx' or post.get_file_ext == 'xls' %}
+                        <i class="fas fa-file-excel"></i>
+                    {% elif post.get_file_ext == 'docx' or post.get_file_ext == 'doc' %}
+                        <i class="fas fa-file-word"></i>
+                    {% else %}
+                        <i class="fas fa-file"></i>
+                    {% endif %}
+                    </a>
                 </section>
                 {% endif %}
             </article>
