--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -50,6 +50,7 @@
                 <header class="mb-4">
                     <!-- Post title-->
                     <h1 class="fw-bolder mb-1">{{ post.title }}</h1>
+                    <ht class="text-muted">{{ post.hook_text }}</ht>
                     <!-- Post meta content-->
                     <div class="text-muted fst-italic mb-2">{{ post.created_at }}</div>
                     <!-- Post categories-->
@@ -69,7 +70,7 @@
                 {% endif %}
                 <!-- Post content-->
                 <section class="mb-5">
-                    {{ post.content }}
+                    {{ post.content  }}
                 </section>
                 {% if post.file_upload %}
                 <section class="mb-5">
