--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blog list</title>
+    <title>Blog</title>
 
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="{% static 'blog/bootstrap/bootstrap.min.css' %}" media="screen">
@@ -36,7 +36,7 @@
                         <a class="nav-link" href="./blog_list.html">Blog</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./about_me.html">About me</a>
+                        <a class="nav-link" href="./about_me.html">About Me</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
@@ -92,10 +92,11 @@
 
     <div class="container my-3">
         <div class="row">
-            <div class="col-md-8 col-lg-9">
+            <div class="col-md-8 col-lg-9" id="main-area">
                 <h1>Blog</h1>
 
                 <!-- Blog Post -->
+                {% if post_list.exists %}
                 {% for p in post_list %}
                 <div class="card mb-4">
                     {% if p.head_image %}
@@ -117,6 +118,9 @@
                     </div>
                 </div>
                 {% endfor %}
+                {% else %}
+                <h3>아직 게시물이 없습니다.</h3>
+                {% endif %}
 
                 <!-- Pagination -->
                 <ul class="pagination justify-content-center mb-4">
